--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AndroidIntentRemake_Persistence_7</string>
+    <string name="app_name">Remake and Persistence</string>
 </resources>
